# LEC_ASSIGNMENT

./: .gitignore  README.md
.github/workflows/: deploy.yml
Agentic System/: README.md  pyproject.toml  requirements.txt
Agentic System/backend/: Dockerfile  config.yaml  pyproject.toml
Agentic System/backend/kb-docs/: lec-industries-overview.md
Agentic System/backend/src/agent/core/: budget.py  graph.py  guardrails.py  memory.py  observability.py  state.py
Agentic System/backend/src/agent/nodes/: executor.py  planner.py  reflector.py
Agentic System/backend/src/api/: app.py
Agentic System/backend/src/prompts/: v1_baseline.txt  v2_improved.txt
Agentic System/backend/src/tools/: __init__.py  calculator.py  document_qa.py  knowledge_base.py  web_search.py
Agentic System/backend/tests/: langsmith_eval.py  test_agent_eval.py
Agentic System/docs/: LEC.drawio  technical-documentation.md
Agentic System/frontend/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
Agentic System/frontend/app/: globals.css  layout.tsx
Agentic System/frontend/components/: AnswerBlock.tsx  BudgetBlock.tsx  ChatInterface.tsx  EmptyState.tsx  ErrorBlock.tsx  MessageInput.tsx  PlanningBlock.tsx  ReflectingNote.tsx  Sidebar.tsx  ToolResultBlock.tsx  TurnView.tsx
Agentic System/frontend/lib/: demo.ts  sse.ts  utils.ts
Agentic System/frontend/types/: agent.ts
Agentic System/infra/: .gitignore  main.tf
Agentic System/src/agent/: __init__.py
Agentic System/src/agent/core/: __init__.py  budget.py  graph.py  memory.py  state.py  summary_memory.py
Agentic System/src/api/: app.py
Agentic System/src/tools/: __init__.py  web_search.py  wikipedia.py
Agentic System/tests/: test_agent.py  test_agent_eval.py  test_budget.py  test_tools.py
(+4 files in other folders)
