[project]
name = "agentic-system"
version = "0.1.0"
description = "Production-grade AI agent with Plan-and-Execute architecture"
requires-python = ">=3.11"
dependencies = [
    # Core
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-aws",
    "langgraph-checkpoint-aws",
    "fastapi",
    "uvicorn[standard]",
    # Tool deps
    "sympy",
    "wikipedia-api",
    # Utilities
    "pydantic",
    "boto3",
    "python-dotenv",
    "httpx",
    "pyyaml",
    "tavily-python>=0.7.23",
    "langsmith>=0.7.32",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "deepeval",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
